--- a/src/reset.scss
+++ b/src/reset.scss
@@ -17,9 +17,9 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	vertical-align: baseline;
 }
 /* remember to define focus styles! */
-// :focus {
-// 	outline: 0;
-// }
+:focus {
+	outline: 0;
+}
 body {
 	line-height: 1;
 	color: black;
