--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -74,3 +74,30 @@ button {
     clear: both;
   }
 }
+
+input[type=text].read-only-field {
+  // cursors can still select, but looks disabled
+  cursor: default;
+  color: transparent;
+  text-shadow: 0px 0px 0px $blue;
+
+  background-color: transparent;
+  box-shadow: none;
+
+  border: 0px solid $black;
+  border-bottom: 1px solid $black;
+  border-radius:0;
+
+  text-align: center;
+  font-weight: bold;
+
+  &:focus {
+    border: 0px solid $black;
+    border-bottom: 1px solid $black;
+    margin: 10px 1px;
+  }
+}
+
+.rmdp-wrapper {
+  margin: 10px auto;
+}
