--- a/src/styles/swatchCards.scss
+++ b/src/styles/swatchCards.scss
@@ -205,6 +205,7 @@ button.swatch {
 
 .date {
   font-size: calc(var(--swatchCardScale) * 14px);
+  margin-right: -20px;
 }
 
 // swatch buttons sizing
