--- a/src/styles/pageStructure.scss
+++ b/src/styles/pageStructure.scss
@@ -65,7 +65,7 @@ h2.title {
   color: $dark-grey;
 }
 
-.copied-toast{
+.copied-toast {
   max-width: 400px;
   margin: 0 auto;
   border-radius: 5px;
@@ -76,10 +76,42 @@ h2.title {
   font-size: 16px;
   opacity: 0;
   transition: opacity 1.5s ease-out;
+  user-select: none;
+  pointer-events: none;
 
   &.visible{
     opacity: 0.7;
     transition: opacity 0.1s;
+  }
+}
+
+
+.subscribeButton-wrapper {
+  display: flex;
+  margin-top: 10px;
+  justify-content: center;
+}
+
+.subscribeButton {
+  border: 2px solid transparent;
+  color: #f4f4f4;
+  background-color: #29366f;
+  border-radius: 255px 25px 225px 25px/25px 225px 25px 255px;
+
+  font-family: $main-font;
+  font-size: 12px;
+  padding: 5px;
+  cursor: pointer;
+
+
+  @media (min-width: 1280px) {
+    font-size: 24px;
+    padding: 10px;
+  }
+
+  margin-bottom: -35px;
+  .subscribe-icon{
+    margin-left: 6px;
   }
 }
 
